--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>每周五的日期链接</title>
+    <title>巧豆报</title>
     <style>
         table {
             width: 100%;
@@ -67,6 +67,5 @@
             <!-- 如果需要补全最后一行，可以在这里添加额外的<td></td> -->
         </tr>
     </table>
-    <p>注意：所有日期链接指向同一张图片(image.jpg)，你需要替换为实际的图片路径。</p>
-</body>
+    </body>
 </html>
