--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-    <h1>2024-07-01至2025-02-01之间的每周五</h1>
+    <h1>巧豆报</h1>
     <table>
         <tr>
             <td><a href="image.jpg">2024-07-05</a></td>
